syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";


package pg;

message ResultSet {
    repeated google.protobuf.Value values = 2;
}

message ExecuteRequest {
    string table = 1;
}

service Fdw {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc Execute (ExecuteRequest) returns (stream ResultSet);
}

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}